name:                iohk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/iohk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Iohk
    Config
  build-depends:       base >= 4.7 && < 5
    , binary
    , containers
    , distributed-process
    , network-transport-tcp
    , optparse-applicative
    , random
  default-language:    Haskell2010
  ghc-options:         -Wall


executable iohk-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
    , iohk
    , bytestring
    , distributed-process
    , network
    , network-transport-tcp
    , network-transport
    , optparse-applicative
    , random
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite iohk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:     Test.Payload

  build-depends:       base
    , iohk
    , containers
    , QuickCheck
--    , scientific
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , HUnit

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/githubuser/iohk
